Remove hardcoded Mapbox token and clean commit history